--- a/templates/home.html
+++ b/templates/home.html
@@ -114,6 +114,122 @@
     </div>
   </div>
 </section>
+{% if record is defined %}
+<section class="section">
+  <div class="container has-text-centered py-4">
+    <h2 class="title mb-6">PP Records and Recent users</h2>
+  </div>
+  <div class="server-stats">
+    <div class="pp-std-vn">
+      <div class="stat-block" style="background: linear-gradient(hsl(var(--main), 15%, 15%, 0.8), hsl(var(--main), 15%, 15%, 0.8)), url(https://assets.ppy.sh/beatmaps/{{ record['std-vn']['set_id'] }}/covers/card.jpg); background-size: cover; background-position-x: 50%;">
+        <div class="stat-mode-name">
+          <i class="mode-icon mode-osu"></i> <a href="https://seventwentyseven.tk/score/{{ record['std-vn']['id'] }}/vn" class="stat-mode-scorelink">Vanilla Osu Record</a>
+        </div>
+        <div class="stat-avatar-pp">
+          <img src="https://a.seventwentyseven.tk/{{ record['std-vn']['userid'] }}" class="stat-avatar-img"><span> {{ record['std-vn']['pp'] }}  <strong>PP</strong></span>
+        </div>
+        <div class="stat-user">
+          <span>Played by <a href="https://seventwentyseven.tk/u/{{ record['std-vn']['userid'] }}" style="font-weight: 500 !important;">{{ record['std-vn']['name'] }}</a></span>
+        </div>
+      </div>
+    </div>
+    <div class="pp-std-rx">
+      <div class="stat-block" style="background: linear-gradient(hsl(var(--main), 15%, 15%, 0.8), hsl(var(--main), 15%, 15%, 0.8)), url(https://assets.ppy.sh/beatmaps/{{ record['std-rx']['set_id'] }}/covers/card.jpg); background-size: cover; background-position-x: 50%;">
+        <div class="stat-mode-name">
+          <i class="mode-icon mode-osu"></i> <a href="https://seventwentyseven.tk/score/{{ record['std-rx']['id'] }}/rx" class="stat-mode-scorelink">Relax Osu Record</a>
+        </div>
+        <div class="stat-avatar-pp">
+          <img src="https://a.seventwentyseven.tk/{{ record['std-rx']['userid'] }}" class="stat-avatar-img"><span> {{ record['std-rx']['pp'] }}  <strong>PP</strong></span>
+        </div>
+        <div class="stat-user">
+          <span>Played by <a href="https://seventwentyseven.tk/u/{{ record['std-rx']['userid'] }}" style="font-weight: 500 !important;">{{ record['std-rx']['name'] }}</a></span>
+        </div>
+      </div>
+    </div>
+    <div class="pp-std-ap">
+      <div class="stat-block" style="background: linear-gradient(hsl(var(--main), 15%, 15%, 0.8), hsl(var(--main), 15%, 15%, 0.8)), url(https://assets.ppy.sh/beatmaps/{{ record['std-ap']['set_id'] }}/covers/card.jpg); background-size: cover; background-position-x: 50%;">
+        <div class="stat-mode-name">
+          <i class="mode-icon mode-osu"></i> <a href="https://seventwentyseven.tk/score/{{ record['std-ap']['id'] }}/ap" class="stat-mode-scorelink">Autopilot Osu Record</a>
+        </div>
+        <div class="stat-avatar-pp">
+          <img src="https://a.seventwentyseven.tk/{{ record['std-ap']['userid'] }}" class="stat-avatar-img"><span> {{ record['std-ap']['pp'] }}  <strong>PP</strong></span>
+        </div>
+        <div class="stat-user">
+          <span>Played by <a href="https://seventwentyseven.tk/u/{{ record['std-ap']['userid'] }}" style="font-weight: 500 !important;">{{ record['std-ap']['name'] }}</a></span>
+        </div>
+      </div>
+    </div>
+    <div class="pp-taiko-vn">
+      <div class="stat-block" style="background: linear-gradient(hsl(var(--main), 15%, 15%, 0.8), hsl(var(--main), 15%, 15%, 0.8)), url(https://assets.ppy.sh/beatmaps/{{ record['taiko-vn']['set_id'] }}/covers/card.jpg); background-size: cover; background-position-x: 50%;">
+        <div class="stat-mode-name">
+          <i class="mode-icon mode-taiko"></i> <a href="https://seventwentyseven.tk/score/{{ record['taiko-vn']['id'] }}/vn" class="stat-mode-scorelink">Vanilla Taiko Record</a>
+        </div>
+        <div class="stat-avatar-pp">
+          <img src="https://a.seventwentyseven.tk/{{ record['taiko-vn']['userid'] }}" class="stat-avatar-img"><span> {{ record['taiko-vn']['pp'] }}  <strong>PP</strong></span>
+        </div>
+        <div class="stat-user">
+          <span>Played by <a href="https://seventwentyseven.tk/u/{{ record['taiko-vn']['userid'] }}" style="font-weight: 500 !important;">{{ record['taiko-vn']['name'] }}</a></span>
+        </div>
+      </div>
+    </div>
+    <div class="pp-taiko-rx">
+      <div class="stat-block" style="background: linear-gradient(hsl(var(--main), 15%, 15%, 0.8), hsl(var(--main), 15%, 15%, 0.8)), url(https://assets.ppy.sh/beatmaps/{{ record['taiko-rx']['set_id'] }}/covers/card.jpg); background-size: cover; background-position-x: 50%;">
+        <div class="stat-mode-name">
+          <i class="mode-icon mode-taiko"></i> <a href="https://seventwentyseven.tk/score/{{ record['std-rx']['id'] }}/rx" class="stat-mode-scorelink">Relax Taiko Record</a>
+        </div>
+        <div class="stat-avatar-pp">
+          <img src="https://a.seventwentyseven.tk/{{ record['taiko-rx']['userid'] }}" class="stat-avatar-img"><span> {{ record['taiko-rx']['pp'] }}  <strong>PP</strong></span>
+        </div>
+        <div class="stat-user">
+          <span>Played by <a href="https://seventwentyseven.tk/u/{{ record['taiko-rx']['userid'] }}" style="font-weight: 500 !important;">{{ record['taiko-rx']['name'] }}</a></span>
+        </div>
+      </div>
+    </div>
+    <div class="pp-catch-vn">
+      <div class="stat-block" style="background: linear-gradient(hsl(var(--main), 15%, 15%, 0.8), hsl(var(--main), 15%, 15%, 0.8)), url(https://assets.ppy.sh/beatmaps/{{ record['catch-vn']['set_id'] }}/covers/card.jpg); background-size: cover; background-position-x: 50%;">
+        <div class="stat-mode-name">
+          <i class="mode-icon mode-catch"></i> <a href="https://seventwentyseven.tk/score/{{ record['catch-vn']['id'] }}/vn" class="stat-mode-scorelink">Vanilla Catch Record</a>
+        </div>
+        <div class="stat-avatar-pp">
+          <img src="https://a.seventwentyseven.tk/{{ record['catch-vn']['userid'] }}" class="stat-avatar-img"><span> {{ record['catch-vn']['pp'] }}  <strong>PP</strong></span>
+        </div>
+        <div class="stat-user">
+          <span>Played by <a href="https://seventwentyseven.tk/u/{{ record['catch-vn']['userid'] }}" style="font-weight: 500 !important;">{{ record['catch-vn']['name'] }}</a></span>
+        </div>
+      </div>
+    </div>
+    <div class="pp-catch-rx">
+      <div class="stat-block" style="background: linear-gradient(hsl(var(--main), 15%, 15%, 0.8), hsl(var(--main), 15%, 15%, 0.8)), url(https://assets.ppy.sh/beatmaps/{{ record['catch-rx']['set_id'] }}/covers/card.jpg); background-size: cover; background-position-x: 50%;">
+        <div class="stat-mode-name">
+          <i class="mode-icon mode-catch"></i> <a href="https://seventwentyseven.tk/score/{{ record['catch-rx']['id'] }}/rx" class="stat-mode-scorelink">Relax Catch Record</a>
+        </div>
+        <div class="stat-avatar-pp">
+          <img src="https://a.seventwentyseven.tk/{{ record['catch-rx']['userid'] }}" class="stat-avatar-img"><span> {{ record['catch-rx']['pp'] }}  <strong>PP</strong></span>
+        </div>
+        <div class="stat-user">
+          <span>Played by <a href="https://seventwentyseven.tk/u/{{ record['catch-rx']['userid'] }}" style="font-weight: 500 !important;">{{ record['catch-rx']['name'] }}</a></span>
+        </div>
+      </div>
+    </div>
+    <div class="pp-mania-vn">
+      <div class="stat-block" style="background: linear-gradient(hsl(var(--main), 15%, 15%, 0.8), hsl(var(--main), 15%, 15%, 0.8)), url(https://assets.ppy.sh/beatmaps/{{ record['mania-vn']['set_id'] }}/covers/card.jpg); background-size: cover; background-position-x: 50%;">
+        <div class="stat-mode-name">
+          <i class="mode-icon mode-mania"></i> <a href="https://seventwentyseven.tk/score/{{ record['mania-vn']['id'] }}/vn" class="stat-mode-scorelink">Vanilla Mania Record</a>
+        </div>
+        <div class="stat-avatar-pp">
+          <img src="https://a.seventwentyseven.tk/{{ record['mania-vn']['userid'] }}" class="stat-avatar-img"><span> {{ record['mania-vn']['pp'] }}  <strong>PP</strong></span>
+        </div>
+        <div class="stat-user">
+          <span>Played by <a href="https://seventwentyseven.tk/u/{{ record['mania-vn']['userid'] }}" style="font-weight: 500 !important;">{{ record['mania-vn']['name'] }}</a></span>
+        </div>
+      </div>
+    </div>
+    <!-- Latest Users -->
+    <div class="latest-users">
+      I really love Amatsuka Uto. Like, a lot. Like, a whole lot. You have no idea. I love her so much that it is inexplicable, and I'm ninety-nine percent sure that I have an unhealthy obsession. I will never get tired of listening that sweet, angelic voice. It is my life goal to meet up her in real life and just say hello to her.<br><br>Will finish later
+    </div>
+</section>
+{% endif %}
 
 {% if not session.authenticated %}
 <section class="hero splash">
