--- a/templates/verify.html
+++ b/templates/verify.html
@@ -35,8 +35,8 @@
                                 <div class="howto-number">1</div>
                             </div>
                             <div class="howto-withsub">
-                                <h1 class="title is-left">Download the switcher</h1>
-                                <h2 class="subtitle">click here to download our switcher!</h2>
+                                <h1 class="title is-left">Copy osu shortcut</h1>
+                                <h2 class="subtitle">Right click -> Properties.</h2>
                             </div>
                         </div>
                     </div>
@@ -47,8 +47,8 @@
                                 <div class="howto-number">2</div>
                             </div>
                             <div class="howto-withsub">
-                                <h1 class="title is-left">Switch to {{ appName() }}</h1>
-                                <h2 class="subtitle"><strong>1.</strong> Click “Install Certificate” <strong>2.</strong> Click “Switch to  {{ appName() }}" <strong>3.</strong> Open osu!</h2>
+                                <h1 class="title is-left">Go to the target element</h1>
+                                <h2 class="subtitle">Go to the end, click space and type -devserver seventwentyseven.tk</h2>
                             </div>
                         </div>
                     </div>
@@ -59,7 +59,7 @@
                                 <div class="howto-number">3</div>
                             </div>
                             <div class="howto-withsub">
-                                <h1 class="title is-left">Login to your account</h1>
+                                <h1 class="title is-left">Save it</h1>
                                 <h2 class="subtitle">Login to your {{ appName() }} account and you should be done!</h2>
                             </div>
                         </div>
