--- a/static/css/pages/home.css
+++ b/static/css/pages/home.css
@@ -68,3 +68,179 @@
 .footer {
   margin: 0;
 }
+/* Server stats block */
+.server-stats {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  gap: 15px 15px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "pp-std-vn pp-std-rx latest-users"
+    "pp-std-ap pp-taiko-vn latest-users"
+    "pp-taiko-rx pp-catch-vn latest-users"
+    "pp-catch-rx pp-mania-vn latest-users";
+  max-height: 650px !important;
+  height: 650px;
+}
+
+.pp-std-vn {
+  justify-self: center;
+  align-self: center;
+  grid-area: pp-std-vn;
+  width: 100%;
+  height: 100%;
+}
+
+.pp-std-rx {
+  justify-self: center;
+  align-self: center;
+  grid-area: pp-std-rx;
+  width: 100%;
+  height: 100%;
+}
+
+.pp-std-ap {
+  justify-self: center;
+  align-self: center;
+  grid-area: pp-std-ap;
+  width: 100%;
+  height: 100%;
+}
+
+.pp-taiko-vn {
+  justify-self: center;
+  align-self: center;
+  grid-area: pp-taiko-vn;
+  width: 100%;
+  height: 100%;
+}
+
+.pp-taiko-rx {
+  justify-self: center;
+  align-self: center;
+  grid-area: pp-taiko-rx;
+  width: 100%;
+  height: 100%;
+}
+
+.pp-catch-vn {
+  justify-self: center;
+  align-self: center;
+  grid-area: pp-catch-vn;
+  width: 100%;
+  height: 100%;
+}
+
+.pp-catch-rx {
+  justify-self: center;
+  align-self: center;
+  grid-area: pp-catch-rx;
+  width: 100%;
+  height: 100%;
+}
+
+.pp-mania-vn {
+  justify-self: center;
+  align-self: center;
+  grid-area: pp-mania-vn;
+  width: 100%;
+  height: 100%;
+}
+
+.stat-block {
+  background-color: hsl(var(--main), 15%, 15%);
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+  padding: 15px;
+}
+
+.stat-block {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 0.8fr 1.4fr 0.8fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  justify-content: start;
+  justify-items: start;
+  grid-template-areas:
+    "stat-mode-name"
+    "stat-avatar-pp"
+    "stat-user";
+  width: 100%;
+  height: 100%;
+  font-weight: 300;
+}
+
+.stat-mode-name {
+  align-self: start;
+  grid-area: stat-mode-name;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 20px;
+}
+
+.stat-avatar-pp {
+  align-self: center;
+  grid-area: stat-avatar-pp;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 18px;
+}
+
+.stat-user {
+  align-self: center;
+  grid-area: stat-user;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 13px;
+}
+
+.stat-avatar-img {
+  max-height: 48px !important;
+  max-width: 48px !important;
+  height: 48px;
+  width: 48px;
+  margin-right: 14px;
+  border-radius: 6px;
+}
+
+.stat-mode-scorelink {
+  text-decoration: none;
+  color: white;
+  transform: 0.2s;
+}
+
+.stat-mode-scorelink:hover {
+  color:violet;
+}
+
+/* Recent users */
+.latest-users {
+  justify-self: center;
+  align-self: center;
+  grid-area: latest-users;
+  width: 100%;
+  height: 100%;
+  background-color: hsl(var(--main), 15%, 15%);
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+  padding: 15px;
+}
+
+.latest-users-header {
+  font-size: 24px;
+  font-weight: 300;
+  color: white;
+}
