--- a/templates/home.html
+++ b/templates/home.html
@@ -126,7 +126,7 @@
           <i class="mode-icon mode-osu"></i> <a href="https://seventwentyseven.tk/score/{{ record['std-vn']['id'] }}/vn" class="stat-mode-scorelink">Vanilla Osu Record</a>
         </div>
         <div class="stat-avatar-pp">
-          <img src="https://a.seventwentyseven.tk/{{ record['std-vn']['userid'] }}" class="stat-avatar-img"><span> {{ record['std-vn']['pp'] }}  <strong>PP</strong></span>
+          <img src="https://a.seventwentyseven.tk/{{ record['std-vn']['userid'] }}" class="stat-avatar-img" onError="this.src='/static/images/avatar_notwork.png';"><span> {{ record['std-vn']['pp'] }}  <strong>PP</strong></span>
         </div>
         <div class="stat-user">
           <span>Played by <a href="https://seventwentyseven.tk/u/{{ record['std-vn']['userid'] }}" style="font-weight: 500 !important;">{{ record['std-vn']['name'] }}</a></span>
@@ -139,7 +139,7 @@
           <i class="mode-icon mode-osu"></i> <a href="https://seventwentyseven.tk/score/{{ record['std-rx']['id'] }}/rx" class="stat-mode-scorelink">Relax Osu Record</a>
         </div>
         <div class="stat-avatar-pp">
-          <img src="https://a.seventwentyseven.tk/{{ record['std-rx']['userid'] }}" class="stat-avatar-img"><span> {{ record['std-rx']['pp'] }}  <strong>PP</strong></span>
+          <img src="https://a.seventwentyseven.tk/{{ record['std-rx']['userid'] }}" class="stat-avatar-img" onError="this.src='/static/images/avatar_notwork.png';"><span> {{ record['std-rx']['pp'] }}  <strong>PP</strong></span>
         </div>
         <div class="stat-user">
           <span>Played by <a href="https://seventwentyseven.tk/u/{{ record['std-rx']['userid'] }}" style="font-weight: 500 !important;">{{ record['std-rx']['name'] }}</a></span>
@@ -152,7 +152,7 @@
           <i class="mode-icon mode-osu"></i> <a href="https://seventwentyseven.tk/score/{{ record['std-ap']['id'] }}/ap" class="stat-mode-scorelink">Autopilot Osu Record</a>
         </div>
         <div class="stat-avatar-pp">
-          <img src="https://a.seventwentyseven.tk/{{ record['std-ap']['userid'] }}" class="stat-avatar-img"><span> {{ record['std-ap']['pp'] }}  <strong>PP</strong></span>
+          <img src="https://a.seventwentyseven.tk/{{ record['std-ap']['userid'] }}" class="stat-avatar-img" onError="this.src='/static/images/avatar_notwork.png';"><span> {{ record['std-ap']['pp'] }}  <strong>PP</strong></span>
         </div>
         <div class="stat-user">
           <span>Played by <a href="https://seventwentyseven.tk/u/{{ record['std-ap']['userid'] }}" style="font-weight: 500 !important;">{{ record['std-ap']['name'] }}</a></span>
@@ -165,7 +165,7 @@
           <i class="mode-icon mode-taiko"></i> <a href="https://seventwentyseven.tk/score/{{ record['taiko-vn']['id'] }}/vn" class="stat-mode-scorelink">Vanilla Taiko Record</a>
         </div>
         <div class="stat-avatar-pp">
-          <img src="https://a.seventwentyseven.tk/{{ record['taiko-vn']['userid'] }}" class="stat-avatar-img"><span> {{ record['taiko-vn']['pp'] }}  <strong>PP</strong></span>
+          <img src="https://a.seventwentyseven.tk/{{ record['taiko-vn']['userid'] }}" class="stat-avatar-img" onError="this.src='/static/images/avatar_notwork.png';"><span> {{ record['taiko-vn']['pp'] }}  <strong>PP</strong></span>
         </div>
         <div class="stat-user">
           <span>Played by <a href="https://seventwentyseven.tk/u/{{ record['taiko-vn']['userid'] }}" style="font-weight: 500 !important;">{{ record['taiko-vn']['name'] }}</a></span>
@@ -178,7 +178,7 @@
           <i class="mode-icon mode-taiko"></i> <a href="https://seventwentyseven.tk/score/{{ record['std-rx']['id'] }}/rx" class="stat-mode-scorelink">Relax Taiko Record</a>
         </div>
         <div class="stat-avatar-pp">
-          <img src="https://a.seventwentyseven.tk/{{ record['taiko-rx']['userid'] }}" class="stat-avatar-img"><span> {{ record['taiko-rx']['pp'] }}  <strong>PP</strong></span>
+          <img src="https://a.seventwentyseven.tk/{{ record['taiko-rx']['userid'] }}" class="stat-avatar-img" onError="this.src='/static/images/avatar_notwork.png';"><span> {{ record['taiko-rx']['pp'] }}  <strong>PP</strong></span>
         </div>
         <div class="stat-user">
           <span>Played by <a href="https://seventwentyseven.tk/u/{{ record['taiko-rx']['userid'] }}" style="font-weight: 500 !important;">{{ record['taiko-rx']['name'] }}</a></span>
@@ -191,7 +191,7 @@
           <i class="mode-icon mode-catch"></i> <a href="https://seventwentyseven.tk/score/{{ record['catch-vn']['id'] }}/vn" class="stat-mode-scorelink">Vanilla Catch Record</a>
         </div>
         <div class="stat-avatar-pp">
-          <img src="https://a.seventwentyseven.tk/{{ record['catch-vn']['userid'] }}" class="stat-avatar-img"><span> {{ record['catch-vn']['pp'] }}  <strong>PP</strong></span>
+          <img src="https://a.seventwentyseven.tk/{{ record['catch-vn']['userid'] }}" class="stat-avatar-img" onError="this.src='/static/images/avatar_notwork.png';"><span> {{ record['catch-vn']['pp'] }}  <strong>PP</strong></span>
         </div>
         <div class="stat-user">
           <span>Played by <a href="https://seventwentyseven.tk/u/{{ record['catch-vn']['userid'] }}" style="font-weight: 500 !important;">{{ record['catch-vn']['name'] }}</a></span>
@@ -204,7 +204,7 @@
           <i class="mode-icon mode-catch"></i> <a href="https://seventwentyseven.tk/score/{{ record['catch-rx']['id'] }}/rx" class="stat-mode-scorelink">Relax Catch Record</a>
         </div>
         <div class="stat-avatar-pp">
-          <img src="https://a.seventwentyseven.tk/{{ record['catch-rx']['userid'] }}" class="stat-avatar-img"><span> {{ record['catch-rx']['pp'] }}  <strong>PP</strong></span>
+          <img src="https://a.seventwentyseven.tk/{{ record['catch-rx']['userid'] }}" class="stat-avatar-img" onError="this.src='/static/images/avatar_notwork.png';"><span> {{ record['catch-rx']['pp'] }}  <strong>PP</strong></span>
         </div>
         <div class="stat-user">
           <span>Played by <a href="https://seventwentyseven.tk/u/{{ record['catch-rx']['userid'] }}" style="font-weight: 500 !important;">{{ record['catch-rx']['name'] }}</a></span>
@@ -217,7 +217,7 @@
           <i class="mode-icon mode-mania"></i> <a href="https://seventwentyseven.tk/score/{{ record['mania-vn']['id'] }}/vn" class="stat-mode-scorelink">Vanilla Mania Record</a>
         </div>
         <div class="stat-avatar-pp">
-          <img src="https://a.seventwentyseven.tk/{{ record['mania-vn']['userid'] }}" class="stat-avatar-img"><span> {{ record['mania-vn']['pp'] }}  <strong>PP</strong></span>
+          <img src="https://a.seventwentyseven.tk/{{ record['mania-vn']['userid'] }}" class="stat-avatar-img" onError="this.src='/static/images/avatar_notwork.png';"><span> {{ record['mania-vn']['pp'] }}  <strong>PP</strong></span>
         </div>
         <div class="stat-user">
           <span>Played by <a href="https://seventwentyseven.tk/u/{{ record['mania-vn']['userid'] }}" style="font-weight: 500 !important;">{{ record['mania-vn']['name'] }}</a></span>
