--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -50,7 +50,7 @@
             {% if session.authenticated %}
             <div class="navbar-item has-dropdown is-hoverable">
                 <a class="navbar-link">
-					<img src="https://a.seventwentyseven.tk/{{ session.user_data['id'] }}" style="height: 100%; margin-right: 7px; border-radius: 9001px;">
+					<img src="https://a.seventwentyseven.tk/{{ session.user_data['id'] }}" style="height: 100%; margin-right: 7px; border-radius: 9001px;" onError="this.src='/static/images/avatar_notwork.png';">
                     {{ session.user_data['name'] }}
                 </a>
                 <div class="navbar-dropdown">
