--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -83,9 +83,13 @@
                                         <% flags[user.country.toUpperCase()] %>
                                     </div>
                                 </a>
-                                <a :href="'/u/'+user.player_id">
+                                <a :href="'/u/'+user.player_id" v-if="user.clan_tag == null">
                                     <% user.name %>
                                 </a>
+                                <a :href="'/u/'+user.player_id" v-else>
+                                    [<% user.clan_tag %>] <% user.name %>
+                                </a>
+
                             </td>
                             <td v-if="sort == 'pp' || sort == 'rscore'">
                                 <% (sort=='pp' ? user.pp+'pp' : "" ) %>
