Few fixes on settings

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -155,7 +155,7 @@
                 <h1 class="title">
                     <p class="ranks">
                         <img src="/static/images/flags/{{ user['country']|upper }}.png" class="profile-flag">
-                        <span class="bgf">{{ clan }}{{ user['name'] }}</span>
+                        <span class="bgf">{{ clan['tag'] }}{{ user['name'] }}</span>
                     </p>
                 </h1>
                 <transition name="fade">
