--- a/templates/settings/profile.html
+++ b/templates/settings/profile.html
@@ -3,7 +3,34 @@
 
 {% block content %}
 <link rel="stylesheet" href="/static/css/pages/settings/style.css">
-
+{% if flash %}
+<div class='noti-banner noti-banner-warning' style="margin-bottom: 30px;">
+  <div class="container">
+    <div class="noti-column">
+      <div class='noti-col noti-col-icon'></div>
+      <div class='noti-col noti-col-label'>
+        <div class='noti-bannertype'>
+          {% if status=='error' %}
+          Warning
+          {% elif status=='success' %}
+          Notice
+          {% endif %}
+        </div>
+        <div class='noti-bannertext'>
+          {% if status=='error' %}
+          Uh oh! Be careful!
+          {% elif status=='success' %}
+          Hey! Listen!
+          {% endif %}
+        </div>
+      </div>
+      <div class='noti-banner-text'>
+        {{ flash }}
+      </div>
+    </div>
+  </div>
+</div>
+{% endif %}
 <div class="main-block">
   {% include "settings/sidebar.html" %}
   <div class="block-content right">
@@ -68,34 +95,5 @@
     </div>
   </div>
 </div>
-
-{% if flash %}
-<div class='noti-banner noti-banner-warning'>
-  <div class="container">
-    <div class="noti-column">
-      <div class='noti-col noti-col-icon'></div>
-      <div class='noti-col noti-col-label'>
-        <div class='noti-bannertype'>
-          {% if status=='error' %}
-          Warning
-          {% elif status=='success' %}
-          Notice
-          {% endif %}
-        </div>
-        <div class='noti-bannertext'>
-          {% if status=='error' %}
-          Uh oh! Be careful!
-          {% elif status=='success' %}
-          Hey! Listen!
-          {% endif %}
-        </div>
-      </div>
-      <div class='noti-banner-text'>
-        {{ flash }}
-      </div>
-    </div>
-  </div>
-</div>
-{% endif %}
 
 {% endblock %}
