--- a/templates/404.html
+++ b/templates/404.html
@@ -19,7 +19,7 @@
 		<ol>
 			<li>- Check that the URL you entered is correct.</li>
 			<li>- Make sure that the place you are visiting isn't under maintenance!</li>
-			<li></li>
+			<li>- Maybe you're not permitted to visit this page?</li>
 		</ol>
 	</div>
 </div>
