--- a/templates/score.html
+++ b/templates/score.html
@@ -499,5 +499,6 @@
             {% endif %}
         </div>
     </div>
+</div>
 <script src="/static/js/asserts/vue-flags.js"></script>
 {% endblock %}
