--- a/templates/settings/sidebar.html
+++ b/templates/settings/sidebar.html
@@ -20,5 +20,8 @@
         <a class="single-menu single-menu--active router-link" href="/settings/custom">
             <i class="fas fa-air-freshener"></i><span class="single-menu--text"> Customisation </span>
         </a>
+        <a class="single-menu single-menu--active router-link" href="/settings/user_profile">
+            <i class="fas fa-id-card"></i><span class="single-menu--text"> User Profile </span>
+        </a>
     </div>
 </div>
